SAR Blai Sandbox/src/objects/NOC__c.object
<CustomObject>
    <fields>
        <fullName>Tipo_de_servicio_NT__c</fullName>
        <formula>TEXT(Nueva_Tarifa__r.Servicio__r.Tipo_Servicio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de servicio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_servicio__c</fullName>
        <formula>if( RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;,TEXT(Oportunidad_renegociada__r.Servicio__r.Tipo_Servicio__c ),TEXT(Oportunidad__r.Servicio__r.Tipo_Servicio__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de servicio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_solicitud__c</fullName>
        <label>Tipo de solicitud</label>
        <picklist>
            <picklistValues>
                <fullName>Presentaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campañas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_tarifa_autorizada__c</fullName>
        <label>Tipo de tarifa autorizada</label>
        <picklist>
            <picklistValues>
                <fullName>Tarifas anuales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuevos servicios</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_estancia2__c</fullName>
        <formula>if( RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;,TEXT(Oportunidad_renegociada__r.Servicio__r.Tipo_Estancia__c),TEXT(Oportunidad__r.Servicio__r.Tipo_Estancia__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo estancia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_ocupacion__c</fullName>
        <formula>if( RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;,TEXT(Oportunidad_renegociada__r.Servicio__r.Tipo_Ocupacion__c ),TEXT(Oportunidad__r.Servicio__r.Tipo_Ocupacion__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo ocupación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validacion_tecnica__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requiere de validación técnica</description>
        <label>Validación técnica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visibilidad_Centros_1__c</fullName>
        <label>Visibilidad Centros 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibilidad_Centros_2__c</fullName>
        <label>Visibilidad Centros 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibilidad_Centros_3__c</fullName>
        <label>Visibilidad Centros 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zona_Comercial__c</fullName>
        <inlineHelpText>Selección de centros afectados por la NOC en función de la Zona Comercial</inlineHelpText>
        <label>Zona Comercial</label>
        <picklist>
            <picklistValues>
                <fullName>Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Este</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallorca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Occidental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Oriental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zaragoza</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>idContratoOp__c</fullName>
        <formula>Oportunidad_renegociada__r.Id_contrato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>idContratoOp</label>
        <type>Text</type>
    </fields>
    <label>NOC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>Centro__c</columns>
        <columns>Oportunidad_renegociada__c</columns>
        <columns>Fecha_fin__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Direccion_Division_Domiciliaria_NOC</fullName>
        <filterScope>Queue</filterScope>
        <label>Dirección División Domiciliaria</label>
        <queue>Direccion_Division_Domiciliaria</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NOC11_Personales</fullName>
        <columns>NAME</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_inicio__c</columns>
        <columns>Fecha_fin__c</columns>
        <columns>Fecha_fin_flujo__c</columns>
        <columns>Centro__c</columns>
        <columns>Descuento_aplicado__c</columns>
        <columns>Descuento_Fundacion__c</columns>
        <columns>Precio_actual__c</columns>
        <columns>Precio_propuesto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_11_Descuento_General_Centro</value>
        </filters>
        <label>NOC11 Descuento General Centro</label>
    </listViews>
    <listViews>
        <fullName>NOC_10_Tarifas</fullName>
        <columns>NAME</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>Fecha_fin_flujo__c</columns>
        <columns>Fecha_inicio__c</columns>
        <columns>Fecha_fin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_10_Tarifas</value>
        </filters>
        <label>NOC 10 Tarifas</label>
    </listViews>
    <listViews>
        <fullName>NOC_11_Descuento_Personal_Renegociado</fullName>
        <columns>NAME</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_inicio__c</columns>
        <columns>Fecha_fin__c</columns>
        <columns>Centro__c</columns>
        <columns>Descuento_aplicado__c</columns>
        <columns>Descuento_Fundacion__c</columns>
        <columns>Precio_actual__c</columns>
        <columns>Precio_propuesto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_11_Descuento_Personal_Renegociado</value>
        </filters>
        <label>NOC 11 Descuento Personal Renegociado</label>
    </listViews>
    <listViews>
        <fullName>NOC_11_Descuentos_Personales</fullName>
        <columns>NAME</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>Oportunidad__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_inicio__c</columns>
        <columns>Fecha_fin__c</columns>
        <columns>Descuento_aplicado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_11_Descuento_Personal</value>
        </filters>
        <label>NOC 11 Descuentos Personales</label>
    </listViews>
    <listViews>
        <fullName>NOC_12_Acuerdos_no_comerciales1</fullName>
        <columns>Tipo__c</columns>
        <columns>NAME</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_inicio__c</columns>
        <columns>Fecha_fin__c</columns>
        <columns>Descuento_aplicado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tipo__c</field>
            <operation>equals</operation>
            <value>Convenio no comercial</value>
        </filters>
        <label>NOC 12 Acuerdos no comerciales</label>
    </listViews>
    <listViews>
        <fullName>NOC_12_Convenios4</fullName>
        <columns>Tipo__c</columns>
        <columns>NAME</columns>
        <columns>Alcance__c</columns>
        <columns>Recomendador__c</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_fin_flujo__c</columns>
        <columns>Fecha_inicio__c</columns>
        <columns>Fecha_fin__c</columns>
        <columns>Descuento_aplicado__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Visibilidad_Centros_1__c</columns>
        <columns>Visibilidad_Centros_2__c</columns>
        <columns>Visibilidad_Centros_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tipo__c</field>
            <operation>equals</operation>
            <value>Acuerdo Comercial,Convenio,Acuerdo Comisionamiento</value>
        </filters>
        <label>NOC 12 Convenios y Acuerdos Comerciales</label>
    </listViews>
    <listViews>
        <fullName>NOC_9_Campa_as</fullName>
        <columns>NAME</columns>
        <columns>Estado_Campana__c</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Fecha_inicio__c</columns>
        <columns>Fecha_fin__c</columns>
        <columns>Descuento_aplicado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_9_Campana</value>
        </filters>
        <label>NOC 9 Campañas</label>
    </listViews>
    <listViews>
        <fullName>NOCs_Pendientes</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6) AND 7</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Centro__c</columns>
        <columns>Estado_Flujo__c</columns>
        <columns>Fecha_inicio__c</columns>
        <columns>Fecha_fin__c</columns>
        <columns>Oportunidad__c</columns>
        <columns>Oportunidad_renegociada__c</columns>
        <columns>Centro_de_ingreso__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_9_Campana</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_11_Descuento_Personal_Renegociado</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_10_Tarifas</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_11_Descuento_General_Centro</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_11_Descuento_Personal</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOC__c.NOC_12_Convenios</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>NOCs Pendientes</label>
    </listViews>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NOCs</pluralLabel>
    <recordTypes>
        <fullName>NOC_10_Tarifas</fullName>
        <active>true</active>
        <description>Tarifas de clientes privados</description>
        <label>NOC 10 Tarifas de clientes privados</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOC_11_Descuento_General_Centro</fullName>
        <active>true</active>
        <label>NOC 11 Descuento General Centro</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOC_11_Descuento_Personal</fullName>
        <active>true</active>
        <label>NOC 11 Descuento Personal Puntual</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOC_11_Descuento_Personal_Renegociado</fullName>
        <active>true</active>
        <description>Renegociación de un descuento personal a un cliente</description>
        <label>NOC 11 Descuento Personal Renegociado</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOC_12_Convenios</fullName>
        <active>true</active>
        <label>NOC 12 Convenios</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOC_9_Campana</fullName>
        <active>true</active>
        <description>Comunicaciones, presentaciones y campañas</description>
        <label>NOC 9 Comunicaciones, presentaciones y campañas</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Bloquear_NOC_aprobada</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Estado_Flujo__c , &quot;Aprobado&quot;)  &amp;&amp;  $Profile.Id  &lt;&gt; &apos;00eb0000000zplj&apos; &amp;&amp;  (ISCHANGED( Name ) ||  ISCHANGED( Descripcion__c ) ||  ISCHANGED(  Descuento_Fundacion__c  ) ||  ISCHANGED( Tipo__c ) ||  ISCHANGED( Alcance__c ) ||   ISCHANGED( Aspectos_economicos__c ) ||  ISCHANGED( Aspectos_no_economicos__c ) ||  ISCHANGED( Fecha_inicio__c ) ||  ISCHANGED( Fecha_fin__c ) ||  ISCHANGED( Descuento_permanente__c ) ||  ISCHANGED( Oportunidad_renegociada__c ) ||  ISCHANGED( Condiciones_Especiales__c ) ||  ISCHANGED( Oportunidad__c ) ||  ISCHANGED( Cliente__c ) ||  ISCHANGED( Descenso_de_Ocupacion__c ) ||  ISCHANGED( Ratio_de_ocupacion_actual__c ) ||  ISCHANGED( Diferencial_de_tarifas__c ) ||  ISCHANGED( Tarifas_Competencia__c ) ||  ISCHANGED( Otros_motivos__c ) ||  ISCHANGED( Descuento_aplicado__c ) ||  ISCHANGED( Precio_propuesto__c )  ||   ISCHANGED( No_se_solicita_fianza__c ))</errorConditionFormula>
        <errorMessage>No está permitido modificar una NOC aprobada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Caducitat_Nocs_Renegociades</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName =&apos;NOC_11_Descuento_Personal_Renegociado&apos; &amp;&amp;  NOT(ISPICKVAL( Estado_Flujo__c , &apos;Aprobado&apos;))  &amp;&amp;
 ( (NOT(ISNULL(Fecha_inicio__c   )) &amp;&amp; NOT(ISNULL(CreatedDate)) &amp;&amp; Fecha_inicio__c   &lt;  DATE( YEAR( DATEVALUE(CreatedDate) ) ,1,1) &amp;&amp; DATEVALUE(CreatedDate) &gt; DATE (YEAR( DATEVALUE(CreatedDate) ),1,31)) || 
 (NOT(ISNULL(Fecha_inicio__c   )) &amp;&amp; NOT(ISNULL(CreatedDate)) &amp;&amp; DATEVALUE(CreatedDate) &lt; DATE (YEAR( DATEVALUE(CreatedDate) ),2,1) &amp;&amp; DATEVALUE(CreatedDate) &gt; DATE (YEAR( DATEVALUE(CreatedDate) ),1,1) &amp;&amp; Fecha_inicio__c   &lt;  DATE( YEAR(DATEVALUE(CreatedDate))-1 ,12,1)) ||
  (NOT(ISNULL(Fecha_Inicio_1__c   )) &amp;&amp; NOT(ISNULL(CreatedDate)) &amp;&amp; Fecha_Inicio_1__c   &lt;  DATE( YEAR( DATEVALUE(CreatedDate) ) ,1,1) &amp;&amp; DATEVALUE(CreatedDate) &gt; DATE (YEAR( DATEVALUE(CreatedDate) ),1,31)) || 
 (NOT(ISNULL(Fecha_Inicio_1__c   )) &amp;&amp; NOT(ISNULL(CreatedDate)) &amp;&amp; DATEVALUE(CreatedDate) &lt; DATE (YEAR( DATEVALUE(CreatedDate) ),2,1) &amp;&amp; DATEVALUE(CreatedDate) &gt; DATE (YEAR( DATEVALUE(CreatedDate) ),1,1) &amp;&amp; Fecha_Inicio_1__c   &lt;  DATE( YEAR( DATEVALUE(CreatedDate) )-1 ,12,1))) ||
 ( (NOT(ISNULL(Fecha_inicio__c   )) &amp;&amp; ISNULL(CreatedDate) &amp;&amp; Fecha_inicio__c   &lt;  DATE( YEAR( TODAY() ) ,1,1) &amp;&amp; TODAY()  &gt; DATE (YEAR( TODAY()  ),1,31)) || 
 (NOT(ISNULL(Fecha_inicio__c   )) &amp;&amp; ISNULL(CreatedDate) &amp;&amp; TODAY()  &lt; DATE (YEAR( TODAY()  ),2,1) &amp;&amp; TODAY()  &gt; DATE (YEAR( TODAY()  ),1,1) &amp;&amp; Fecha_inicio__c   &lt;  DATE( YEAR(TODAY() )-1 ,12,1)) ||
  (NOT(ISNULL(Fecha_Inicio_1__c   )) &amp;&amp; ISNULL(CreatedDate) &amp;&amp; Fecha_Inicio_1__c   &lt;  DATE( YEAR( TODAY()  ) ,1,1) &amp;&amp; TODAY()  &gt; DATE (YEAR( TODAY() ),1,31)) || 
 (NOT(ISNULL(Fecha_Inicio_1__c   )) &amp;&amp; ISNULL(CreatedDate) &amp;&amp; TODAY()  &lt; DATE (YEAR( TODAY()  ),2,1) &amp;&amp; TODAY()  &gt; DATE (YEAR( TODAY()  ),1,1) &amp;&amp; Fecha_Inicio_1__c   &lt;  DATE( YEAR( TODAY()  )-1 ,12,1)))</errorConditionFormula>
        <errorMessage>No puede haber una NOC renegociada con una fecha de inicio de un año anterior a la fecha de creación de la NOC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Descuento_Fianza_no_valida</fullName>
        <active>true</active>
        <errorConditionFormula>Fianza_a_cobrar__c &gt;1 || Fianza_a_cobrar__c &lt; 0 ||  Importe_Fianza_a_cobrar__c &gt; Tarifa_oficial__c || Importe_Fianza_a_cobrar__c &lt;0</errorConditionFormula>
        <errorMessage>La fianza no es válida</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Descuento_fijo_o_por_meses</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT(ISBLANK( Precio_propuesto__c )) ||  NOT(ISBLANK( Descuento_aplicado__c ))) &amp;&amp;  (NOT( ISBLANK( Importe_Mes_1__c ) )  ||  NOT(ISBLANK( Descuento_Mes_1__c )))</errorConditionFormula>
        <errorMessage>No se permite informar descuento fijo y por meses en la misma NOC</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estancia_no_puede_cambiar_en_NOC11</fullName>
        <active>true</active>
        <description>NOC 11 Descuento Personal Renegociado no pueden cambiar de tipo de estancia. Se debe abrir una nueva oportunidad</description>
        <errorConditionFormula>AND(
	RecordType.Name = &apos;NOC 11 Descuento Personal Renegociado&apos;,
	AND (NOT(ISBLANK( Tipo_estancia2__c )),
      	NOT(ISBLANK( Tipo_de_estancia_NT__c )),
      	ISCHANGED( Tipo_estancia2__c ),
      	Tipo_estancia2__c  &lt;&gt; Tipo_de_estancia_NT__c
    )
)</errorConditionFormula>
        <errorMessage>Para cambios de tipo de estancia se debe abrir una nueva oportunidad</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fechas_Importes</fullName>
        <active>true</active>
        <errorConditionFormula>Fecha_Fin_1__c &gt;=  Fecha_Inicio_2__c  || Fecha_Fin_2__c &gt;=  Fecha_Inicio_3__c || Fecha_Fin_3__c &gt;=  Fecha_Inicio_4__c || Fecha_Fin_4__c &gt;=  Fecha_Inicio_5__c || Fecha_Fin_5__c &gt;=  Fecha_Inicio_6__c</errorConditionFormula>
        <errorMessage>La fecha de fin de un periodo no puede ser más grande que la fecha de inicio del siguiente periodo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fechas_Importes_2</fullName>
        <active>true</active>
        <errorConditionFormula>Fecha_Inicio_1__c &gt;  Fecha_Fin_1__c || Fecha_Inicio_2__c &gt;  Fecha_Fin_2__c || Fecha_Inicio_3__c &gt;  Fecha_Fin_3__c || Fecha_Inicio_4__c &gt;  Fecha_Fin_4__c || Fecha_Inicio_5__c &gt;  Fecha_Fin_5__c || Fecha_Inicio_6__c &gt;  Fecha_Fin_6__c</errorConditionFormula>
        <errorMessage>La fecha de inicio de un periodo no puede ser posterior que la fecha de fin de ese mismo periodo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IdContrato_no_valido</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Id_contrato__c  , &quot;[C]{1}[T]{1}[R]{1}[0-9]{5}&quot;) ) &amp;&amp;  NOT(  ISBLANK(Id_contrato__c ) )</errorConditionFormula>
        <errorDisplayField>Id_contrato__c</errorDisplayField>
        <errorMessage>Formato no válido</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Importes_no_validos</fullName>
        <active>true</active>
        <errorConditionFormula>Descuento_Mes_1__c &gt; 1 || Descuento_Mes_2__c &gt; 1 || Descuento_Mes_3__c &gt; 1 || Descuento_Mes_4__c &gt; 1 || Descuento_Mes_5__c &gt; 1 || Descuento_Mes_6__c &gt; 1 ||  Descuento_aplicado__c  &gt;1 || Descuento_Mes_1__c &lt; 0 || Descuento_Mes_2__c &lt; 0 || Descuento_Mes_3__c &lt; 0 || Descuento_Mes_4__c &lt; 0 || Descuento_Mes_5__c &lt; 0 || Descuento_Mes_6__c &lt; 0 ||  Descuento_aplicado__c  &lt; 0 ||  Importe_Mes_1__c &gt;  Tarifa_oficial__c || Importe_Mes_2__c &gt;  Tarifa_oficial__c || Importe_Mes_3__c &gt;  Tarifa_oficial__c || Importe_Mes_4__c &gt;  Tarifa_oficial__c || Importe_Mes_5__c &gt;  Tarifa_oficial__c || Importe_Mes_6__c &gt;  Tarifa_oficial__c ||  Precio_propuesto__c &gt;  Tarifa_oficial__c || Importe_Mes_1__c &lt;  0 || Importe_Mes_2__c &lt;  0 || Importe_Mes_3__c &lt;  0 || Importe_Mes_4__c &lt;  0 || Importe_Mes_5__c &lt;  0 || Importe_Mes_6__c &lt;  0 ||  Precio_propuesto__c &lt;  0</errorConditionFormula>
        <errorMessage>Importes o descuentos no válidos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Comentarios_campana</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name =&apos;NOC 9 Comunicaciones, presentaciones y campañas&apos; &amp;&amp;  ISPICKVAL( Tipo_de_solicitud__c , &apos;Presentaciones&apos;)  &amp;&amp;    ISBLANK( Comentarios__c )</errorConditionFormula>
        <errorDisplayField>Comentarios__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Detalle_Medios_de_comunicacion</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name =&apos;NOC 9 Comunicaciones, presentaciones y campañas&apos; &amp;&amp;   ISPICKVAL( Tipo__c , &apos;Medio de comunicación&apos;)   &amp;&amp;  ISPICKVAL(    Detalle_Medios_Coumunicacion__c   , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Detalle_Medios_Coumunicacion__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Division</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName =&apos;NOC_12_Convenios&apos;  ||RecordType.DeveloperName =&apos;NOC_9_Campana&apos;)   &amp;&amp;  Residencial__c=false  &amp;&amp;  Domiciliaria__c=false</errorConditionFormula>
        <errorMessage>Es obligatorio informar como mínimo una división</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Fecha_inicio</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT( ISNULL(Precio_propuesto__c )) ||  NOT( ISNULL( Descuento_aplicado__c )))
 &amp;&amp; (RecordType.Id = &apos;012b0000000QBcv&apos; ||  RecordType.Id  = &apos;012b0000000QDCD&apos;) 
 &amp;&amp; (ISNULL( Fecha_inicio__c ))</errorConditionFormula>
        <errorDisplayField>Fecha_inicio__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Id_Contrato</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Oportunidad_renegociada__r.Id_contrato__c ) &amp;&amp;  ISBLANK( Id_contrato__c ) &amp;&amp; RecordType.DeveloperName =&apos;NOC_11_Descuento_Personal_Renegociado&apos;</errorConditionFormula>
        <errorDisplayField>Id_contrato__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Jornada</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name  =&apos;NOC 9 Comunicaciones, presentaciones y campañas&apos; &amp;&amp;   ISPICKVAL( Tipo__c , &apos;Jornadas y otros eventos&apos;)   &amp;&amp;  ISPICKVAL( Jornadas__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Jornadas__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Medios_de_comunicacion</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name =&apos;NOC 9 Comunicaciones, presentaciones y campañas&apos; &amp;&amp;   ISPICKVAL( Tipo__c , &apos;Medio de comunicación&apos;)   &amp;&amp;  ISPICKVAL(   Medios_de_Comunicacion__c   , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Medios_de_Comunicacion__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Minimo_Una_Duracion</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( Duracion_del_descuento__c ) &amp;&amp; ISNULL(  Duracion_del_descuento_meses__c ) &amp;&amp;  (RecordType.Id = &apos;012b0000000QBcq&apos;  || RecordType.Id = &apos;012b0000000QBd0&apos;  ||RecordType.Id = &apos;012b0000000QBcg&apos;) &amp;&amp;  Descuento_permanente__c =false  &amp;&amp;  Residencial__c=true</errorConditionFormula>
        <errorMessage>Se tiene que seleccionar una Duración del descuento.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Subjornada</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name =&apos;NOC 9 Comunicaciones, presentaciones y campañas&apos; &amp;&amp;   ISPICKVAL( Tipo__c , &apos;Jornadas y otros eventos&apos;)   &amp;&amp;  ISPICKVAL(  Subclasificacion_Jornadas__c  , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Subclasificacion_Jornadas__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Tipo_de_presentacion</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name =&apos;NOC 9 Comunicaciones, presentaciones y campañas&apos; &amp;&amp;  ISPICKVAL( Tipo_de_solicitud__c , &apos;Presentaciones&apos;)  &amp;&amp;    ISPICKVAL( Tipo_de_presetnacion__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Tipo_de_presetnacion__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_descuento_o_importe</fullName>
        <active>true</active>
        <description>Informar descuento o importe para los descuentos por meses</description>
        <errorConditionFormula>((NOT(ISBLANK( Importe_Mes_1__c ))) &amp;&amp; (NOT(ISBLANK( Descuento_Mes_1__c)))) || 
((NOT(ISBLANK( Importe_Mes_2__c ))) &amp;&amp; (NOT(ISBLANK(Descuento_Mes_2__c)))) || 
((NOT(ISBLANK( Importe_Mes_3__c ))) &amp;&amp; (NOT(ISBLANK(Descuento_Mes_3__c)))) || 
((NOT(ISBLANK( Importe_Mes_4__c ))) &amp;&amp; (NOT(ISBLANK(Descuento_Mes_4__c)))) || 
((NOT(ISBLANK( Importe_Mes_5__c ))) &amp;&amp; (NOT(ISBLANK(Descuento_Mes_5__c))))|| 
((NOT(ISBLANK( Importe_Mes_6__c ))) &amp;&amp; (NOT(ISBLANK(Descuento_Mes_6__c))))</errorConditionFormula>
        <errorMessage>Sólo se permite informar importe o descuento</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_fecha_fin</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal&apos; ||  RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;) &amp;&amp; Descuento_permanente__c=false  &amp;&amp;  ISBLANK(Fecha_fin__c ) &amp;&amp; (NOT( ISBLANK(Descuento_aplicado__c)) || NOT( ISBLANK(Precio_propuesto__c) ))</errorConditionFormula>
        <errorDisplayField>Fecha_fin__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_fecha_fin_valida</fullName>
        <active>true</active>
        <errorConditionFormula>Descuento_permanente__c=false  &amp;&amp;   Fecha_fin__c  &lt;=  Fecha_inicio__c</errorConditionFormula>
        <errorDisplayField>Fecha_fin__c</errorDisplayField>
        <errorMessage>La fecha fin debe ser mayor a la fecha inicio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_fianza</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Fianza_a_cobrar__c  ) ) &amp;&amp;  NOT(ISBLANK( Importe_Fianza_a_cobrar__c ) )</errorConditionFormula>
        <errorMessage>No se puede introducir la fianza en % y en importe a la vez.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_idContrato</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Id_contrato__c ) &amp;&amp;  ISPICKVAL(Estado_Flujo__c  , &apos;Pendiente&apos;) &amp;&amp;  RecordTypeId = &apos;012b0000000QDCD&apos;</errorConditionFormula>
        <errorDisplayField>Id_contrato__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_precio_o_fianza</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal&apos; || RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;) &amp;&amp; ISBLANK( Descuento_aplicado__c ) &amp;&amp; ISBLANK( Precio_propuesto__c ) &amp;&amp; ISBLANK( Descuento_Mes_1__c ) &amp;&amp; ISBLANK( Importe_Mes_1__c ) &amp;&amp; ISBLANK( Importe_Fianza_a_cobrar__c ) &amp;&amp; ISBLANK( Fianza_a_cobrar__c )</errorConditionFormula>
        <errorMessage>Es obligatorio informar el precio, el descuento o la fianza.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_solo_una_duracion</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISNULL( Duracion_del_descuento__c ) ) &amp;&amp;  NOT( ISNULL(  Duracion_del_descuento_meses__c ) )</errorConditionFormula>
        <errorMessage>Sólo se puede informar una Duración del descuento (en días o en meses).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_tipo_de_descuento</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal&apos; || RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;) &amp;&amp; ( OR( ISBLANK(Precio_propuesto__c)   &amp;&amp;   ISBLANK( Descuento_aplicado__c ) ,
NOT(ISBLANK(Precio_propuesto__c))   &amp;&amp;   NOT(ISBLANK(Descuento_aplicado__c ))))</errorConditionFormula>
        <errorMessage>Es obligatorio informar un descuento o importe</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_validacion_tecnica</fullName>
        <active>true</active>
        <errorConditionFormula>Validacion_tecnica__c =true  &amp;&amp;    ISBLANK(Area_de_validacion_tecnica__c)</errorConditionFormula>
        <errorDisplayField>Area_de_validacion_tecnica__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marcar_Descenso_de_ocupacion</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Ratio_de_ocupacion_actual__c) &amp;&amp;  Descenso_de_Ocupacion__c=true</errorConditionFormula>
        <errorDisplayField>Ratio_de_ocupacion_actual__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marcar_Tarifas_competencia</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Diferencial_de_tarifas__c ) &amp;&amp;   Tarifas_Competencia__c=true</errorConditionFormula>
        <errorDisplayField>Diferencial_de_tarifas__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_informar_duracion_si_permanente</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT( ISNULL( Duracion_del_descuento__c ) ) ||  NOT( ISNULL(  Duracion_del_descuento_meses__c ) )) &amp;&amp; ( Descuento_permanente__c =true)</errorConditionFormula>
        <errorMessage>No se puede seleccionar una duración si el descuento es permanente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_informar_fecha_fin</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal&apos; ||  RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;) &amp;&amp; Descuento_permanente__c =true  &amp;&amp;  NOT(ISBLANK(Fecha_fin__c ))</errorConditionFormula>
        <errorDisplayField>Fecha_fin__c</errorDisplayField>
        <errorMessage>Para un descuento permanente no se puede informar una fecha fin</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_informar_importes_si_permanente</fullName>
        <active>true</active>
        <errorConditionFormula>(Descuento_permanente__c =true) &amp;&amp; (NOT (ISBLANK( Importe_Mes_1__c )) || NOT (ISBLANK( Importe_Mes_2__c )) || NOT (ISBLANK( Importe_Mes_3__c )) || NOT (ISBLANK( Importe_Mes_4__c )) || NOT (ISBLANK( Importe_Mes_5__c )) || NOT (ISBLANK( Importe_Mes_6__c )) || NOT (ISBLANK(  Descuento_Mes_1__c )) || NOT (ISBLANK(  Descuento_Mes_2__c )) || NOT (ISBLANK(  Descuento_Mes_3__c )) || NOT (ISBLANK(  Descuento_Mes_4__c )) || NOT (ISBLANK(  Descuento_Mes_5__c )) || NOT (ISBLANK(  Descuento_Mes_6__c )) || NOT (ISBLANK(   Fecha_Inicio_1__c )) || NOT (ISBLANK(   Fecha_Inicio_2__c )) || NOT (ISBLANK(   Fecha_Inicio_3__c )) || NOT (ISBLANK(   Fecha_Inicio_4__c )) || NOT (ISBLANK(   Fecha_Inicio_5__c )) || NOT (ISBLANK(   Fecha_Inicio_6__c )) || NOT (ISBLANK(   Fecha_Fin_1__c )) || NOT (ISBLANK(   Fecha_Fin_2__c )) || NOT (ISBLANK(   Fecha_Fin_3__c )) || NOT (ISBLANK(   Fecha_Fin_4__c )) || NOT (ISBLANK(   Fecha_Fin_5__c ))|| NOT (ISBLANK(   Fecha_Fin_6__c )))</errorConditionFormula>
        <errorMessage>No puedes seleccionar importes por periodos si el descuento es permanente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ratio_de_ocupacion_superior_a_100</fullName>
        <active>true</active>
        <errorConditionFormula>Ratio_de_ocupacion_actual__c&gt;1</errorConditionFormula>
        <errorDisplayField>Ratio_de_ocupacion_actual__c</errorDisplayField>
        <errorMessage>No puede sobrepasar el 100%</errorMessage>
    </validationRules>
</CustomObject>